Refine language bindings for 1.0.1